<resources>
    <string name="app_name">GeopagosApplication</string>
    <string name="your_order">Your order</string>
    <string name="your_amount">Amount: &#160;</string>
    <string name="payment">Payment Method: &#160;</string>
    <string name="card_issue">Card Issue: &#160;</string>
    <string name="enter_amount">Please, enter your amount:</string>
    <string name="amount">amount</string>
    <string name="amount_error">Invalid amount</string>
    <string name="next">Next</string>
    <string name="successful_payment">Successful payment!</string>
    <string name="pay">Pay</string>
    <string name="amount_title">Your amount</string>
    <string name="bank_title">Your bank</string>
    <string name="payment_title">Your payment Method</string>
    <string name="retry">Retry</string>
    <string name="error_message">You do not have Internet connection</string>
</resources>